Change relative address to absolute

--- a/arendia/signin.html
+++ b/arendia/signin.html
@@ -96,7 +96,7 @@
   <body>
     <!-- Splash screen -->
     <arendia-splash-screen>
-      <img src="./brand.png" alt="Arendia logo" />
+      <img src="https://mstamenov.github.io/static/arendia/brand.png" alt="Arendia logo" />
       <div id="api"></div>
     </arendia-splash-screen>
   </body>
